/**
* (C) 2023 Ford Motor Company
* (C) 2021 Geotab
*
* All files and artifacts in the repository at https://github.com/w3c/automotive-viss2
* are licensed under the provisions of the license provided by the LICENSE file in this repository.
*
**/

syntax = "proto3";
package grpcProtobufMessages;

//import "google/protobuf/timestamp.proto";
option go_package = "./";

enum ResponseStatus {
    SUCCESS = 0;
    ERROR = 1;
}

enum SubscribeResponseType {
    RESPONSE = 0;
    EVENT = 1;
}

service VISSv2 {
  rpc GetRequest (GetRequestMessage) returns (GetResponseMessage);

  rpc SetRequest (SetRequestMessage) returns (SetResponseMessage);

  rpc SubscribeRequest (SubscribeRequestMessage) returns (stream SubscribeStreamMessage);

  rpc UnsubscribeRequest (UnsubscribeRequestMessage) returns (UnsubscribeResponseMessage);
}

message ErrorResponseMessage {
    string Number = 1;
    optional string Reason = 2;
    optional string Message = 3;
}

message FilterExpressions {
  message FilterExpression {
    enum FilterType {
        PATHS = 0;
        TIMEBASED = 1;
        RANGE = 2;
        CHANGE = 3;
        CURVELOG = 4;
        HISTORY = 5;
        STATIC_METADATA = 6;
        DYNAMIC_METADATA = 7;
    }
    FilterType FType = 1;

    message FilterValue {
        message PathsValue {
            repeated string RelativePath = 1;
        }
        optional PathsValue ValuePaths = 1;

        message TimebasedValue {
            string Period = 1;
        }
        optional TimebasedValue ValueTimebased = 2;

        message RangeValue {
            string LogicOperator = 1;
            string Boundary = 2;
        }
        repeated RangeValue ValueRange = 3;

        message ChangeValue {
            string LogicOperator = 1;
            string Diff = 2;
        }
        optional ChangeValue ValueChange = 4;

        message CurvelogValue {
            string MaxErr = 1;
            string BufSize = 2;
        }
        optional CurvelogValue ValueCurvelog = 5;

        message HistoryValue {
            string TimePeriod = 1;  //ISO8601 period expression
        }
        optional HistoryValue ValueHistory = 6;

        message StaticMetadataValue {
            string Tree = 1;
        }
        optional StaticMetadataValue ValueStaticMetadata = 7;

        message DynamicMetadataValue {
            string MetadataDomain = 1;
        }
        optional DynamicMetadataValue ValueDynamicMetadata = 8;
    }
    FilterValue Value = 2;
  }
  repeated FilterExpression FilterExp = 1;
}

message DataPackages {
    message DataPackage {
        optional string Path = 1;
        optional int32 PathC = 2;

        message DataPoint {
            string Value = 1;
            optional string Ts = 2;
            optional int32 TsC = 3;
        }
        repeated DataPoint Dp = 3;
    }
    repeated DataPackage Data = 1;
}

message GetRequestMessage {
        string Path = 1;
        optional FilterExpressions Filter = 2;
        optional string Authorization = 3;
        optional string RequestId = 4;
}

message GetResponseMessage {
        ResponseStatus Status = 1;
        message SuccessResponseMessage {
            optional DataPackages DataPack = 1;
            optional string Metadata = 2; // replaces DataPack in static metadata and one dynamic metadata variant
        }
        optional SuccessResponseMessage SuccessResponse = 2;
        optional ErrorResponseMessage ErrorResponse = 3;
        optional string RequestId = 4;
        optional string Ts = 5;
        optional int32 TsC = 6;
}

message SetRequestMessage {
        string Path = 1;
        string Value = 2;
        optional string Authorization = 3;
        optional string RequestId = 4;
}

message SetResponseMessage {
        ResponseStatus Status = 1;
        optional ErrorResponseMessage ErrorResponse = 2;
        optional string RequestId = 3;
        string Ts = 4;
}

message SubscribeRequestMessage {
        string Path = 1;
        optional FilterExpressions Filter = 2;
        optional string Authorization = 3;
        string RequestId = 4;
}

message SubscribeStreamMessage {
    SubscribeResponseType MType = 1;
    ResponseStatus Status = 2;

    message SubscribeResponseMessage {
        optional ErrorResponseMessage ErrorResponse = 1;
        string SubscriptionId = 2;
        string RequestId = 3;
        string Ts = 4;
    }
    optional SubscribeResponseMessage Response = 3;

    message SubscribeEventMessage {
        string SubscriptionId = 1;
        message SuccessResponseMessage {
            DataPackages DataPack = 1;
        }
        optional SuccessResponseMessage SuccessResponse = 2;
        optional ErrorResponseMessage ErrorResponse = 3;
        optional string Ts = 4;
        optional int32 TsC = 5;
    }
    optional SubscribeEventMessage Event = 4;
}

message UnsubscribeRequestMessage {
        string SubscriptionId = 1;
        optional string RequestId = 2;
}

message UnsubscribeResponseMessage {
        string SubscriptionId = 1;
        ResponseStatus Status = 2;
        optional ErrorResponseMessage ErrorResponse = 3;
        optional string RequestId = 4;
        string Ts = 5;
}
